@@ -15,6 +15,9 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+test/unit/server/check_attack.c: some tests for hit_player.
+Nicolas Weeger 2007-05-17
+
 server/ob_types.c, types/Makefile.am, types/item_transformer/item_transformer.c:
   Remove code for the obsolete item_transformer type.
 Alex Schultz 2007-05-16
